style.css
* {
    font-family: 'Lato', sans-serif;
    font-size: 1.25rem;
    font-weight: 300;
    margin: 0;
}

body {
    background: #ffffff;
    border-top: .4rem solid #0967d2; 
}

header {
    display: flex;
    justify-content: space-between;
  }


#logo {
    display: inline-flex;
    align-items: center;
}

#logo img {
    height: 35%;
    padding-right: .5rem;
    padding-left: 1.5rem;
}

nav {
    display: flex;
    align-items: center;
    padding-right: 1rem;
}

li {
    display: inline-flex;
    padding: 1rem;
}

nav a {
    font-size: 1rem;
    color: #7b8794;
    text-decoration: none;
    transition: all .2s ease-in-out;
}

nav a:hover {
    color: #0967d2;
}

.hero button{
    color: #0967d2;
    font-weight:700;
    margin-top: 1.5rem;
    border-radius: 3px;
    padding: 1rem 1.5rem;
    margin-left: 5rem;
}

.hero button:hover {
    background-color: #0967d2;
    color: #FFFFFF;
}


.hero {
    height: 600px;
    background: url("https://tk-assets.lambdaschool.com/33d3e37f-c845-466e-8bb8-1adec86324bd_HeroImage.png") no-repeat center;
    background-size: cover;
}

h1 {
    font-size: 5rem;
    font-weight:700;
    color: #FFFFFF;
    padding-top: 5rem;
    padding-left: 5rem;
}

.hero h2 {
    font-size: 1.75rem;
    color: #FFFFFF;
    width: 50%;
    padding-top: 1rem;
    padding-left: 5rem;
}

main {
    background-color: #f5f7fa;
}
.title {
    padding: 3rem 0;
}

.title p {
    font-size: 1.75rem;
    text-align: center;
    margin: 0 auto;
}

section {
    display: flex;
    justify-content: center;
}

.card {
    padding: 2rem; 
    background-color: white;
    border-radius: 8px;
    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
    text-align: center;
    width: 200px;
    margin: 2rem;
}

.card img {
    width: 50%;
}

.card h2 {
    font-weight: 400;
    margin-top: 1rem;
}

.card p {
    font-size: 1rem;
    color: #7b8794;
    margin-top: 1rem;
}

.card-button {
    font-size: 1rem;
    color: #0967d2;
    margin: 2rem auto 0;
    border: 1px solid #0967d2;
    padding: .5rem;
    text-align: center;
}

.card-button:hover {
    background-color: #0967d2;
    color: #FFFFFF;
}

footer {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 1rem;
    color: #7b8794;
}

footer p {
    font-size: .75rem;
    margin-bottom: 1.5rem;
}

